< 360px: fix select reward button overflow

--- a/src/scss/components/_buttons.scss
+++ b/src/scss/components/_buttons.scss
@@ -43,8 +43,13 @@
   }
 
   &--reward {
-    padding: 2rem 4rem;
-    width: 17rem;
+    padding: 2rem 1rem;
+    width: 100%;
+
+    @include m.breakpoint-sm {
+      padding: 2rem 4rem;
+      width: 17rem;
+    }
   }
 
   &--disabled {
